--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,6 +42,23 @@
 		</section>
 		
 		<!--End Contact -->
+		
+		<!-- About Me -->
+		<section>
+			<div class="page-header">
+				<div id="about-me">
+					<h2>About Me </br><small>Who's this guy?</small></h2>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-12">
+						<p>Hey there! I'm Danny Fann, a recent graduate from the University of California, Irvine with degrees in both Computer Science and Public Health Science! I'm always looking for ways to solve problems and create useful applications through software. I also dabble a bit with photography and graphic design. Feel free to look at some of the things I've worked on!</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<!-- End About Me -->
 
 		<!-- Work -->
 		<section>
@@ -125,6 +143,7 @@
 	<!-- Include js plugin -->
 
 	
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
